@@ -103,7 +103,7 @@ stan <- function(file, model_name = "anon_model",
                  thin = 1, 
                  init = "random", 
                  seed = sample.int(.Machine$integer.max, 1), 
-                 algorithm = c("NUTS", "HMC", "Metropolis"),
+                 algorithm = c("NUTS", "HMC"), #, "Metropolis"),
                  control = NULL,
                  sample_file, # the file to which the samples are written
                  diagnostic_file, # the file to which diagnostics are written 
