@@ -115,7 +115,8 @@ setMethod("sampling", "stanmodel",
                    thin = 1, seed = sample.int(.Machine$integer.max, 1),
                    init = "random", check_data = TRUE, 
                    sample_file, diagnostic_file, verbose = FALSE, 
-                   algorithm = c("NUTS", "HMC", "Metropolis"), control = NULL, ...) {
+                   algorithm = c("NUTS", "HMC"), #, "Metropolis"), 
+                   control = NULL, ...) {
             prep_call_sampler(object)
             model_cppname <- object@model_cpp$model_cppname 
             mod <- get("module", envir = object@dso@.CXXDSOMISC, inherits = FALSE) 
